# golf-judge

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  app.py  build.fish  docker-compose.yml  grade.py  grader_utils.py  import_problems_to_db.py  main.py  pyproject.toml  run.fish  submissions.json
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-23085b36515ce6524f918868b3b0ce4a8ab798979fc6a591f534cca174e20679.json  query-ad5e66be90d683adbf2b19c1d619d1c0a3650edd62dc25d1fe6e2d12fc08c8da.json  query-e37791513640a72ec61a84063ed04294a4f1b11c1a1e255a7b8d19428a1e5d78.json
migrations/: 001_init.sql  002_add_problem_limits.sql  002_remove_problems_table.sql  003_contest_participants.sql  003_store_in_db.sql  004_fix_contest_participants_cascade.sql
problems/0/: grader.py  input.txt  main.py  output.txt  problem.html  statement.md  tests.json
problems/1/: grader.py  input.txt  main.py  output.txt  problem.html  statement.md  tests.json
problems/2/: grader.py  input.txt  output.txt  problem.html  statement.md  tests.json
problems/3/: grader.py  input.txt  output.txt  problem.html  statement.md  tests.json
problems/4/: grader.py  input.txt  output.txt  problem.html  statement.md  tests.json
problems/5/: grader.py  input.txt  output.txt  problem.html  statement.md  tests.json
problems/6/: grader.py  input.txt  (+4 more)
src/: languages.rs  main.rs  markdown.rs  models.rs  problems.rs  runner.rs  session.rs  state.rs
templates/: base.html  index.html  leaderboard.html  login.html  problem.html  problems.html  start.html  submissions.html  waiting_room.html
(+32 files in other folders)
