[package]
name = "golf"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.0.0"
askama = "0.14.0"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
pulldown-cmark = "0.13.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = "0.14.0"
urlencoding = "2.1.3"
